--- a/contato.html
+++ b/contato.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="website icon" type="png" href="logo_empresa.png">
+    <link rel="website icon" type="png" href="imagens/logo_empresa.png">
     <title>Inteligencia Artificial</title>
 </head>
 
 <body>
     <nav class="navbar">
         <div id="header-logo">
-            <a id="tecnologi" href="index.html">
-                <img id="logoTec" src="icon_ai.png">
+            <a id="tecnologi" href="imagens/logo_empresa.png">
+                <img id="logoTec" src="imagens/logo_empresa.png">
             </a>
             <h1 id="logo"> TecNologi</h1>
         </div>
