--- a/servicos.html
+++ b/servicos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="website icon" type="png" href="imagens/log.png">
+    <link rel="website icon" type="png" href="imagens/logo_empresa.png">
     <title>TecNologi</title>
 </head>
 
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div id="header-logo">
             <a id="tecnologi" href="index.html">
-                <img id="logoTec" src="imagens/log.png">
+                <img id="logoTec" src="imagens/logo_empresa.png">
             </a>
             <h1 id="logo"> TecNologi </h1>
         </div>
